fixed height on iOS

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,6 @@ input[type="text"], input[type="date"]{
   font-size: 16px;
   outline: none;
   width:100%;
-  min-height:46px;
 }
 
 input[type="text"]:focus, input[type="date"]:focus{ border-color: #9ca3af; background: #fff; }
